Fixes #33504 - align hostname title in host details page

--- a/webpack/assets/javascripts/react_app/components/HostDetails/HostDetails.scss
+++ b/webpack/assets/javascripts/react_app/components/HostDetails/HostDetails.scss
@@ -12,6 +12,20 @@
   padding: 18px;
   background: #f0f0f0;
   .pf-c-card {
-    height: 100%
+    height: 100%;
   }
+}
+
+.hostname-truncate {
+  text-overflow: ellipsis;
+  max-width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  display: inline-block;
+}
+
+.hostname-wrapper {
+  display: inline-flex;
+  max-width: 60%;
+  margin-right: 8px;
 }
